<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/widget_city"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widget_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/widget_date"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/widget_temp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/widget_temp"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/widget_current_weather_description"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/widget_current_weather_description"
        android:src="@drawable/clouds" />

</LinearLayout>