<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.KotlinWeatherApp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/transparent"
    android:theme="@style/Theme.SplashTheme.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Date and time -->
        <TextView
            android:id="@+id/dateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Weather icon image view -->
        <ImageView
            android:id="@+id/weatherImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/current_weather_description"
            android:src="@drawable/clouds" />

        <!-- Date and time -->
        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_widget"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>