<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="90dp"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    android:background="@drawable/white_hourly_background"
    android:elevation="3dp">

    <!-- This is the main LinearLayout that holds the TextViews and ImageView -->
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- This TextView displays the hour -->
        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forecast_time"
            android:textAlignment="center"
            android:textColor="@color/text_color" />

        <!-- This ImageView displays the weather icon -->
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cloudy_sunny"
            android:contentDescription="@string/forecast_weather_icon_description" />

        <!-- This TextView displays the temperature -->
        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/forecast_temp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>